Add Health Check API and workflows (#1)
* Add Health Check API and workflows

* Updated Distribution Name

* Add permission to run gradle script

* Update DB Credential

* Update DB Credential

* Added Gradle BootRun Command

* Formatted Script.js File

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/shipper_connect
+    url: jdbc:postgresql://containers-us-west-71.railway.app:6992/railway
     username: postgres
-    password: root
+    password: cQTfJRz130ElGSY7bfED
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
