--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USERNAME}
-    password: ${DATABASE_PASSWORD}
+    url: jdbc:postgresql://dpg-crjikadumphs73d17vb0-a.oregon-postgres.render.com/postgres_e8jm?user=postgres_e8jm_user&password=YXOtcWNN1B1q9CMqaU0vnjsqYC7UFAAk
+    username: postgres_e8jm_user
+    password: YXOtcWNN1B1q9CMqaU0vnjsqYC7UFAAk
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   flyway:
